2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* data/icons/hicolor_status_scalable_empathy-pending.svg:
	* data/icons/hicolor_status_16x16_empathy-pending.svg:
	* data/icons/hicolor_status_scalable_empathy-extended-away.svg:
	* data/icons/hicolor_status_16x16_empathy-extended-away.svg:
	* data/icons/hicolor_status_scalable_empathy-away.svg:
	* data/icons/hicolor_status_16x16_empathy-away.svg:
	* data/icons/hicolor_status_scalable_empathy-offline.svg:
	* data/icons/hicolor_status_16x16_empathy-offline.svg:
	* data/icons/hicolor_status_scalable_empathy-busy.svg:
	* data/icons/hicolor_status_16x16_empathy-busy.svg:
	* data/icons/hicolor_status_scalable_empathy-available.svg:
	* data/icons/hicolor_status_16x16_empathy-available.svg:
	* data/icons/Makefile.am: Install SVG status images as scalable.
	Fixes bug #492984.

2007-10-28  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-contact-list-store.c:
	* libempathy-gtk/empathy-contact-list-store.h:
	* doc/libempathy-gtk/libempathy-gtk.types:
	* doc/libempathy-gtk/tmpl/empathy-contact-list-store.sgml: Rename
	COL_XXX to EMPATHY_CONTACT_LIST_STORE_COL_XXX since it's in public API.
	Fixes bug #470804.

2007-10-28  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.glade:
	* libempathy-gtk/empathy-group-chat.glade:
	* libempathy-gtk/empathy-main-window.glade:
	* libempathy-gtk/empathy-images.h:
	* src/empathy.c:
	* src/Makefile.am:
	* configure.ac:
	* data/jabber.profile:
	* data/salut.profile:
	* data/msn.profile:
	* data/gtalk.profile:
	* data/irc.profile:
	* data/22x22:
	* data/32x32:
	* data/24x24:
	* data/16x16:
	* data/48x48:
	* data/scalable:
	* data/Makefile.am:
	* data/icons/*: Rename icons to follow fd.o icon naming spec. Move icons
	to the right directory. Fixes bug #470418 (Michael Monreal).

2007-10-28  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-smiley-manager.c: Update to new icon naming