@@ -1,5 +1,10 @@
 2007-11-03  Xavier Claessens  <xclaesse@gmail.com>
 
+	* src/empathy.c: Make use of gtk_init_with_args for command line
+	parsing. Fixes bug #491985 (Basilio Kublik).
+
+2007-11-03  Xavier Claessens  <xclaesse@gmail.com>
+
 	* data/icons/hicolor_status_scalable_empathy-pending.svg:
 	* data/icons/hicolor_status_16x16_empathy-pending.svg:
 	* data/icons/hicolor_status_scalable_empathy-extended-away.svg:
@@ -14,6 +19,10 @@
 	* data/icons/hicolor_status_16x16_empathy-available.svg:
 	* data/icons/Makefile.am: Install SVG status images as scalable.
 	Fixes bug #492984.
+
+2007-11-03  Xavier Claessens  <xclaesse@gmail.com>
+
+	* configure.ac: Bump version to 0.21.2.
 
 2007-10-28  Xavier Claessens  <xclaesse@gmail.com>
 
